<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTempo"
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textTime"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textDistance"
        tools:text="@string/textTime" />

    <Chronometer
        android:id="@+id/simpleChronometer"
        android:layout_width="89dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#F2F2F2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textTempo"
        app:layout_constraintTop_toBottomOf="@+id/editTextdistancia" />

    <Button
        android:id="@+id/buttonFinishRote"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttonFinishRote"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonDisableGPS"
        tools:text="@string/buttonFinishRote" />

    <Button
        android:id="@+id/button_startRote"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/button_startRote"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/buttonenableGPS"
        tools:text="@string/button_startRote" />

    <Button
        android:id="@+id/buttonDisableGPS"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/buttonDisableGPS"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonpermissionGPS" />

    <Button
        android:id="@+id/buttonpermissionGPS"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/buttonpermissionGPS"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonenableGPS"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/buttonenableGPS"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/buttonpermissionGPS" />

    <EditText
        android:id="@+id/editTextdistancia"
        android:layout_width="213dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textDistance"
        app:layout_constraintTop_toBottomOf="@+id/buttonFinishRote" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textDistance"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/button_startRote"
        tools:text="@string/textDistance" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90997565" />

    <ImageButton
        android:id="@+id/button7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"

        android:adjustViewBounds="true"
        android:background="@drawable/ic_search_black_24dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextdistancia" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textTempo">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Find"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>